# ParallelPixels

./: .gitmodules  CMakeLists.txt  README.md  image.py  main.c
pipeline/chunking/include/: chunker_header_all.h  directory_monitor.h  file_tracker.h  image_chunker.h  image_queue.h  image_reader.h  image_table.h
pipeline/chunking/src/: chunk_main.c  directory_monitor.c  file_tracker.c  image_chunker.c  image_ingest.c  image_queue.c  image_reader.c  image_table.c
pipeline/filter/include/: chunk_threader.h  filter.h
pipeline/filter/src/: chunk_threader.c  filter.c
pipeline/reconstruction/: Object.c  a.out  dict.c  dlist.h  image_unchunk.c  image_unchunk.h  test.c
shared/: Object.h  darray.c  darray.h  dict.c  dict.h  dlist.c  image.c  image.h
